--- a/index.html
+++ b/index.html
@@ -5,13 +5,233 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Football Main</title>
+    <title>responsive football main</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/acfcaeea48.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <!-- header section -->
+    <header>
+        <div class="container">
+            <div class="top-banner">
+                <div class="banner-details">
+                    <h1 class="banner-title">
+                        Conmebol
+                        <br>
+                        Copa America
+                        <br>
+                        2021
+                    </h1>
+                    <div class="banner-link">
+                        <a target="_blank" href="https://www.realmadrid.com/en/real-madrid-tv">Watch me <span><i
+                                    class="fas fa-arrow-right"></i></span></a>
+                        <!-- <p>Watch Live </p> -->
+                        <!-- <div>
+                            <i class="fas fa-arrow-right"></i>
+                        </div> -->
+                    </div>
+                    <!-- <p class="banner-link">
+                        Watch Live<i class="fas fa-arrow-right"></i>
+                    </p> -->
+                </div>
+                <div class="banner-image">
+                    <img src="images/banner.png" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- main tag start 
+    player style -->
+    <main>
+        <section>
+            <div class="player-container">
+                <div class="players">
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-1.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Neymar Jr</h1>
+                            <p class="player-info">Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                                professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and
+                                the Brazil national team.</p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-2.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Lionel Messi</h1>
+                            <p class="player-info">Lionel "Leo" Andrés Messi is an Argentine professional footballer who
+                                plays for and captains the Argentina national team.</p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-3.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Cristiano Ronaldo</h1>
+                            <p class="player-info">Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
+                                professional footballer who plays as a forward for Serie A club Juventus and captains
+                                the Portugal national team.</p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-4.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Paulo Dybala</h1>
+                            <p class="player-info">Paulo Exequiel Dybala is an Argentine professional footballer who
+                                plays as a forward for Serie A club Juventus and the Argentina national team.</p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-5.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Mesut Özil</h1>
+                            <p class="player-info">Mesut Özil is a German professional footballer who plays as an
+                                attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is
+                                known for his technical skills, creativity, agility, and finesse.</p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-6.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Mauro Icardi</h1>
+                            <p class="payer-info">Mauro Emanuel Icardi is an Argentine professional footballer who plays
+                                as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-7.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name"> Di María</h1>
+                            <p class="player-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias,
+                                possimusÁngel Fabián di María is an Argentine professional footballer who plays for
+                                Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either
+                                a winger or attacking midfielder.</p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-8.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Kylian Mbappé</h1>
+                            <p class="player-info">Kylian Mbappé Lottin is a French professional footballer who plays as
+                                a forward for Ligue 1 club Paris Saint-Germain and the France national team. Mbappé
+                                began his senior career with Ligue 1 club.</p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-9.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Mohamed Salah</h1>
+                            <p class="player-info">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional
+                                footballer who plays as a forward for Premier League club Liverpool and captains the
+                                Egypt national team. </p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-10.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Harry Kane</h1>
+                            <p class="player-info">Harry Edward Kane MBE is an English professional footballer who plays
+                                as a striker for Premier League club Tottenham Hotspur and captains the England national
+                                team.</p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-11.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Kevin De Bruyne</h1>
+                            <p class="player-info">Kevin De Bruyne is a Belgian professional footballer who plays as a
+                                midfielder for Premier League club Manchester City, where he is vice-captain, and the
+                                Belgium national team. </p>
+                        </div>
+                    </article>
+                    <article class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-12.png" alt="">
+                        </div>
+                        <div class="player-details">
+                            <h1 class="player-name">Philippe Coutinho</h1>
+                            <p class="player-info">Philippe Coutinho Correia is a Brazilian professional footballer who
+                                plays as an attacking midfielder or winger for La Liga club Barcelona and the Brazil
+                                national team.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
 
+            <!--
+             realmadrid club 
+...............................
+......................-->
+            <div class="club-section">
+                <h1 class="club-info">About CluB <i class="fas fa-globe-europe"></i></h1>
+                <div class="madrid-darby">
+                    <div class="video-section">
+                        <h2 class="club-success">Club success i one frame</h2>
+                        <iframe src="https://www.youtube.com/embed/CcV1WnE_G4U" title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="history">
+                        <h2 class="club-success">Club President</h2>
+                        <img class="president-image" src="images/flo.jpg" alt="">
+                        <p class="president-pro">Florentino Pérez Rodríguez is a Spanish businessman, civil engineer,
+                            former politician, and the
+                            current President of Real Madrid as well as Chairman and CEO of Grupo ACS, a civil
+                            engineering
+                            company.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- fotter section -->
+
+        <footer>
+            <div class="footer-section">
+                <div class="footer-logo">
+                    <div class="footer-image">
+                        <img src="images/Logo.png" alt="">
+                    </div>
+                    <div class="footer-icon">
+                        <div>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-dribbble-square"></i>
+                            <i class="fab fa-twitter-square"></i>
+                            <i class="fab fa-youtube"></i>
+                        </div>
+                    </div>
+                    <div class="footer-end">
+                        <p>copyright <i class="far fa-copyright"></i></i> 2022 football</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </main>
 </body>
 
 </html>
