--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         2021
                     </h1>
                     <div class="banner-link">
-                        <a target="_blank" href="https://www.realmadrid.com/en/real-madrid-tv">Watch me <span><i
-                                    class="fas fa-arrow-right"></i></span></a>
+                        <!-- <a target="_blank" href="https://www.realmadrid.com/en/real-madrid-tv">Watch me <span><i
+                                    class="fas fa-arrow-right"></i></span></a> -->
                         <!-- <p>Watch Live </p> -->
                         <!-- <div>
                             <i class="fas fa-arrow-right"></i>
