--- a/index.html
+++ b/index.html
@@ -26,16 +26,9 @@
                         2021
                     </h1>
                     <div class="banner-link">
-                        <!-- <a target="_blank" href="https://www.realmadrid.com/en/real-madrid-tv">Watch me <span><i
-                                    class="fas fa-arrow-right"></i></span></a> -->
-                        <!-- <p>Watch Live </p> -->
-                        <!-- <div>
-                            <i class="fas fa-arrow-right"></i>
-                        </div> -->
+                        <a target="_blank" href="https://www.realmadrid.com/en/real-madrid-tv">Watch me <span><i
+                                    class="fas fa-arrow-right"></i></span></a>
                     </div>
-                    <!-- <p class="banner-link">
-                        Watch Live<i class="fas fa-arrow-right"></i>
-                    </p> -->
                 </div>
                 <div class="banner-image">
                     <img src="images/banner.png" alt="">
